--- a/app/src/main/res/layout/textbook.xml
+++ b/app/src/main/res/layout/textbook.xml
@@ -1,9 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/textbook_layout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
     android:gravity="center"
-    >
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -13,7 +16,7 @@
             android:id="@+id/imageview_cover_art"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop" />
 
     </FrameLayout>
 
@@ -21,21 +24,21 @@
         android:id="@+id/textview_book_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
-        tools:text="Are You My Mother"
-        android:textStyle="bold"
-        android:paddingTop="4dp"
+        android:gravity="center_horizontal"
         android:paddingLeft="8dp"
+        android:paddingTop="4dp"
         android:paddingRight="8dp"
-        android:gravity="center_horizontal"/>
+        android:textSize="12sp"
+        android:textStyle="bold"
+        tools:text="Are You My Mother" />
 
     <TextView
         android:id="@+id/textview_book_author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:textSize="12sp"
-        tools:text="Dr. Seuss"
-        android:gravity="center_horizontal"/>
+        tools:text="Dr. Seuss" />
 
     <TextView
         android:id="@+id/textview_book_seller"
