--- a/app/src/main/res/layout/activity_specific_textbook.xml
+++ b/app/src/main/res/layout/activity_specific_textbook.xml
@@ -25,9 +25,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
-                android:onClick="onClickReturn"
                 android:minWidth="0dp"
                 android:minHeight="0dp"
+                android:onClick="onClickReturn"
                 android:text="←"
                 android:textSize="40sp" />
 
@@ -77,6 +77,17 @@
                 android:layout_marginTop="10dp"
                 android:textSize="14sp"
                 tools:text="Seller: 000000000" />
+
+            <Button
+                android:id="@+id/removeOrContact"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:onClick="onClickContactDelete"
+                android:padding="10dp"
+                android:text="Contact this Seller"
+                android:textColorLink="#000000" />
 
         </LinearLayout>
     </ScrollView>
