--- a/app/src/main/res/layout/activity_profile_login.xml
+++ b/app/src/main/res/layout/activity_profile_login.xml
@@ -20,7 +20,7 @@
         app:menu="@menu/menu_navigation" />
 
     <TextView
-        android:id="@+id/profile_login_title"
+        android:id="@+id/suggestionsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -57,7 +57,7 @@
         app:layout_constraintBottom_toTopOf="@+id/add_book_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_login_title" >
+        app:layout_constraintTop_toBottomOf="@+id/suggestionsTitle" >
 
     </GridView>
 
