--- a/app/src/main/res/layout/activity_specific_textbook.xml
+++ b/app/src/main/res/layout/activity_specific_textbook.xml
@@ -16,6 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:id="@+id/linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -57,6 +58,7 @@
                 android:layout_height="240dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 app:srcCompat="@drawable/textbook" />
 
             <TextView
