--- a/app/src/main/res/layout/textbook.xml
+++ b/app/src/main/res/layout/textbook.xml
@@ -14,9 +14,11 @@
 
         <ImageView
             android:id="@+id/imageview_cover_art"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:scaleType="centerCrop" />
+
 
     </FrameLayout>
 
@@ -55,6 +57,7 @@
         android:gravity="center_horizontal"
         android:textColor="#4CAF50"
         android:textSize="12sp"
+        android:layout_marginBottom="50dp"
         tools:text="$10.00" />
 
 </LinearLayout>
