--- a/app/src/main/res/layout/activity_google_suggestions.xml
+++ b/app/src/main/res/layout/activity_google_suggestions.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Here's What We Found"
+        android:text="Did we find your book?"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,6 +35,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="57dp"
+        android:onClick="notBookButton"
         android:text="None of These Are My Book"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
