Made some UI tweaks which include a color change as well as just making everything a lot bigger.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="The Latest Books"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,12 +37,11 @@
         android:layout_height="0dp"
         android:layout_centerInParent="true"
         android:layout_marginTop="24dp"
-        android:columnWidth="100dp"
         android:gravity="center"
-        android:horizontalSpacing="3dp"
         android:numColumns="2"
-        android:stretchMode="spacingWidthUniform"
-        android:verticalSpacing="24dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
