Added an empty settings option and made a few UI tweaks

--- a/app/src/main/res/layout/activity_add_book_final.xml
+++ b/app/src/main/res/layout/activity_add_book_final.xml
@@ -137,6 +137,7 @@
         app:itemIconTint="@drawable/selector"
         app:itemTextColor="@drawable/selector"
         app:menu="@menu/menu_navigation"
+        app:labelVisibilityMode="labeled"
         tools:layout_editor_absoluteY="768dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
