--- a/app/src/main/res/layout/activity_specific_textbook.xml
+++ b/app/src/main/res/layout/activity_specific_textbook.xml
@@ -128,5 +128,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:labelVisibilityMode="labeled"
         app:menu="@menu/menu_navigation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
