--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -15,4 +15,9 @@
         android:id="@+id/profile"
         android:title="Profile"
         android:icon="@drawable/ic_profile"/>
+
+    <item
+        android:id="@+id/settings"
+        android:title="Settings"
+        android:icon="@drawable/ic_settings"/>
 </menu>
