--- a/app/src/main/res/layout/activity_specific_textbook.xml
+++ b/app/src/main/res/layout/activity_specific_textbook.xml
@@ -81,6 +81,18 @@
                 android:textSize="14sp"
                 tools:text="Seller: 000000000" />
 
+            <Button
+                android:id="@+id/removeOrContact"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:onClick="onClickContactDelete"
+                android:padding="10dp"
+                android:text="Contact this Seller"
+                android:textColorLink="#000000" />
+
             <TextView
                 android:id="@+id/isbn_textview"
                 android:layout_width="wrap_content"
@@ -104,17 +116,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:padding="10dp" />
-
-            <Button
-                android:id="@+id/removeOrContact"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:onClick="onClickContactDelete"
-                android:padding="10dp"
-                android:text="Contact this Seller"
-                android:textColorLink="#000000" />
 
         </LinearLayout>
     </ScrollView>
