Added testing features

--- a/app/src/main/res/layout/activity_add_book_final.xml
+++ b/app/src/main/res/layout/activity_add_book_final.xml
@@ -115,6 +115,20 @@
                 android:ems="10"
                 android:inputType="none|number|numberDecimal" />
 
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Condition"
+                android:textSize="18sp" />
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp" />
+
             <Button
                 android:id="@+id/add_book_button"
                 android:layout_width="wrap_content"
