--- a/app/src/main/res/layout/activity_specific_textbook.xml
+++ b/app/src/main/res/layout/activity_specific_textbook.xml
@@ -67,8 +67,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:textSize="18sp"
+                android:layout_marginTop="0dp"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 tools:text="Price: $0.00" />
 
@@ -78,15 +78,37 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:textSize="14sp"
+                android:textSize="18sp"
                 tools:text="Seller: 000000000" />
 
             <TextView
                 android:id="@+id/isbn_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="ISBN-13: " />
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:text="ISBN-13: "
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/condition_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="8dp"
+                android:text="Condition: "
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/removeOrContact"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:onClick="onClickContactDelete"
+                android:padding="10dp"
+                android:text="Contact this Seller"
+                android:textColorLink="#000000" />
 
             <TextView
                 android:id="@+id/textView"
@@ -104,17 +126,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:padding="10dp" />
-
-            <Button
-                android:id="@+id/removeOrContact"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:onClick="onClickContactDelete"
-                android:padding="10dp"
-                android:text="Contact this Seller"
-                android:textColorLink="#000000" />
 
         </LinearLayout>
     </ScrollView>
