Added a condition info button. Also implemented settings which include four buttons.

--- a/app/src/main/res/layout/activity_add_book_final.xml
+++ b/app/src/main/res/layout/activity_add_book_final.xml
@@ -115,13 +115,31 @@
                 android:ems="10"
                 android:inputType="none|number|numberDecimal" />
 
-            <TextView
-                android:id="@+id/textView7"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:text="Condition"
-                android:textSize="18sp" />
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/conditionButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:onClick="onClickConditionButton"
+                    app:srcCompat="@drawable/ic_info" />
+
+                <TextView
+                    android:id="@+id/condition_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:text="Condition"
+                    android:textSize="18sp" />
+            </LinearLayout>
 
             <Spinner
                 android:id="@+id/spinner"
