--- a/app/src/main/res/layout/activity_profile_login.xml
+++ b/app/src/main/res/layout/activity_profile_login.xml
@@ -3,6 +3,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/profile_login_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileLogin">
@@ -14,10 +15,10 @@
         app:itemBackground="@color/colorPrimary"
         app:itemIconTint="@drawable/selector"
         app:itemTextColor="@drawable/selector"
+        app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:labelVisibilityMode="labeled"
         app:menu="@menu/menu_navigation" />
 
     <TextView
@@ -32,16 +33,42 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Welcome Back" />
 
-    <Button
-        android:id="@+id/add_book_button"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/add_first_book_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add a Book"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="42dp"
+        android:text="Add Your First Book"
+        android:textAllCaps="false"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="32dp"
+        android:clickable="true"
         android:onClick="onClickAdd"
         app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_grid_view" />
+        app:srcCompat="@drawable/plus_sign" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="34dp"
+        android:layout_marginBottom="42dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintEnd_toStartOf="@id/floatingActionButton"
+        app:layout_constraintStart_toEndOf="@id/add_first_book_text"
+        app:srcCompat="@drawable/ic_arrow_forward" />
 
     <GridView
         android:id="@+id/main_grid_view"
@@ -53,10 +80,11 @@
         android:gravity="center"
         android:numColumns="2"
         android:verticalSpacing="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/add_book_button"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/suggestionsTitle" >
+        app:layout_constraintTop_toBottomOf="@+id/suggestionsTitle">
+
 
     </GridView>
 
