--- a/app/src/main/res/layout/textbook.xml
+++ b/app/src/main/res/layout/textbook.xml
@@ -43,12 +43,12 @@
         tools:text="Dr. Seuss" />
 
     <TextView
-        android:id="@+id/textview_book_seller"
+        android:id="@+id/textview_book_condition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:textSize="14sp"
-        tools:text="Seller" />
+        tools:text="Condition: " />
 
     <TextView
         android:id="@+id/textview_book_price"
